--- a/Redaction/Rapport_Final/Rapport.Rmd
+++ b/Redaction/Rapport_Final/Rapport.Rmd
@@ -135,11 +135,13 @@ Comme décrit dans la partie \@ref(subsec:word2vec), les couples `[focus, contex
 
 Pour éviter que les mots trop fréquents, souvent peu informatifs (comme les pronoms personnels), soient sur-entraînés, deux traitements sont effectués :
 
-1. Pour chaque phrase on effectue un sous-échantillonnage. Pour chaque mot $w_i$ on note $z(w_i)$ la proportion d'apparition de ce mot, c'est-à-dire le rapport entre le nombre de fois que ce mot apparait et le nombre total de mots. La probabilité de garder un mot le mot $w_i$ est : $$
+1. Pour chaque phrase on effectue un sous-échantillonnage. Pour chaque mot $w_i$ on note $z(w_i)$ la proportion d'apparition de ce mot, c'est-à-dire le rapport entre le nombre de fois que ce mot apparait et le nombre total de mots. La probabilité de garder un mot le mot $w_i$ est : 
+$$
 \mathbb P(w_i) = \min\left\{\left(\sqrt{\frac{z(w_i)}{q}} + 1 \right)
 \times
 \frac{q}{z(w_i)},1\right\}
-$$ Le paramètre $q$ est appelé « sample » –- échantillonnage- – contrôle le nombre de sous-échantillonnages. La valeur par défaut est 0,001 et pour :  
+$$
+Le paramètre $q$ est appelé « sample » –- échantillonnage- – contrôle le nombre de sous-échantillonnages. La valeur par défaut est 0,001 et pour :  
 
   - $\mathbb P(w_i) = 1$ ($w_i$ est toujours gardé) lorsque $z(w_i)\leq 0,0026$, c'est-à-dire si $w_i$ représentent moins de 0,26 \% du nombre total de mots.  
   - $\mathbb P(w_i)=0,5$ (50 \% de chance de garder $w_i$) when $z(w_i)=0,00746$.  
@@ -183,12 +185,12 @@ Cette quantité est calculée en fonction des matrices $W_e$ et $W_s$ à partir 
 $$
 \mathbb P(w_{focus}\vert w_{context}) = 
 \frac{
-\exp(W_s[focus,]\times {}^tW_e[context,])
+\exp(W_{s,w_{focus}}\times {}^tW_{e,w_{contexte}})
 }{
-\sum_{i=1}^n\exp(W_s[i,]\times {}^tW_e[context,])
+\sum_{i=1}^n\exp(W_{s,w_i}\times {}^tW_{e,w_{contexte}})
 }
 $$
-avec $W_e[i,]$ et $W_s[i,]$ sont les représentations vectorielles du mot $i$ dans la matrice d'entrée et de sortie et $n$ la taille du vocabulaire.
+avec $W_{e,w_i}$ et $W_{s,w_i}$ sont les représentations vectorielles du mot $w_i$ dans la matrice d'entrée et de sortie et $n$ la taille du vocabulaire.
 
 De manière équivalente à l'équation \@ref(eq:objSoftMax), qu'il faut maximiser, pour chaque couple `[focus, contexte]` on associe la fonction de perte suivante, qu'il faut minimiser :
 $$
@@ -219,6 +221,19 @@ Une autre alternative à l'approche *softmax* parfois utilisée est l'approches 
 #### Version negative sampling {#subsec:negsampling}
 
 Le *negative sampling* est basée sur le concept de *Noise Contrastive Estimation* --- estimation contrastée du bruit --- selon lequel un bon modèle logistique devrait être capable de différentier un faux signal d'un vrai signal.
+
+$$
+\log\sigma (W_{s,w_i}{}^tW_e[w_I,])+
+\sum_{i=k}^K\mathbb E_{w_i\sim P_n(w)}[
+\log\sigma (-W_{s,w_i}{}^tW_e[w_I,])
+]
+$$
+
+Pour le négative sampling, la probabilité de garder le mot $w_i$ est égale à : $$
+\mathbb P(w_i) = \frac{z(w_i)^{3/4}}{
+\sum_{j=1}^n z(w_j)^{3/4}
+}
+$$ Avec $z(w_j)$ la fréquence d'apparition du mot $w_j$.
 
 <!-- mikolov 2013b -->
 <!-- Tomas Mikolov, Ilya Sutskever, Kai Chen, Gregory S. Corrado, and Jeffrey Dean. Distributed represen- tations of words and phrases and their compositionality. In NIPS, 2013. -->
